# Simple-Face-Tracking-OpenCV-ROS-TRobot

face_tracker_control/: CMakeLists.txt  package.xml
face_tracker_control/launch/: face_control.launch
face_tracker_control/src/: face_tracker_controller.cpp
face_tracker_pkg/: CMakeLists.txt
face_tracker_pkg/config/: track.yaml
face_tracker_pkg/launch/: start_tracking.launch  start_usb_cam.launch
face_tracker_pkg/src/: face_tracker_node.cpp
trobot/: CMakeLists.txt  package.xml
trobot/launch/: circinus_trobot.launch  joy_param.config.yaml  lmes_arduino_trobot.launch  lmes_joy.launch  lmes_trobot.launch  scibot_x_trobot.launch  teleop_joy.launch  trd_s_trobot.launch  trobot_teleop_joy.launch
trobot/src/: CMakeLists.txt  TRobot.cpp  TRobotAPIMain.cpp  TRobotIOSVC.cpp  TRobotSensorData.cpp  TRobotSerialIOIface.cpp  TRobotUtil.cpp  TRobotUtil_EX.cpp  TRobotUtil_LM.cpp  TRobotUtil_MN.cpp  TRobotUtil_SM.cpp  TRobotUtil_SX.cpp  trobot_node.cpp
trobot/srv/: SRVCmdDIAGLM.srv  SRVCmdErrClearLM.srv  SRVCmdErrStop.srv  SRVCmdErrStopLM.srv  SRVCmdGetInf.srv  SRVCmdGetMode.srv  SRVCmdRebootLM.srv  SRVCmdRecovery.srv  SRVCmdRecoveryLM.srv  SRVCmdSetDrive.srv  SRVCmdSetDriveLM.srv  SRVCmdSetIdle.srv  SRVCmdSetIdleLM.srv  SRVCmdSuspendLM.srv  SRVgetAcc.srv  SRVgetBatteryStat.srv  SRVgetBatteryVoltage.srv  SRVgetBoardTemp.srv  SRVgetBumper.srv  SRVgetDaiTemp.srv  SRVgetDistance.srv  SRVgetDistance2.srv  SRVgetErrSTS.srv  SRVgetForcedVel.srv  SRVgetGyr.srv  SRVgetLastFail.srv  SRVgetMag.srv  SRVgetMntInf.srv  SRVgetNoFloor.srv  SRVgetRobotStat.srv  SRVgetUltraSonic.srv  (+25 more)
(+13 files in other folders)
